<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:id="@+id/rv_container"
        android:background="@color/colorPrimaryDark">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="18dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lv_container"
                android:orientation="vertical">


                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:id="@+id/tv_login_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/login_for_admin"
                    android:textColor="@color/black"
                    android:textStyle="bold"></TextView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="10dp"

                >

                <LinearLayout
                    android:id="@+id/lv_headers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_logo"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">


                </LinearLayout>


                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/etUserName"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_gray"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"></View>

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_gray"


                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"></View>




                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="0dp">


                    <TextView
                        android:id="@+id/tv_login"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="Login"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"></TextView>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"></View>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"
                android:weightSum="10">
                <TextView
                    android:id="@+id/tv_guest"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:text="@string/continue_as_guest"
                  ></TextView>

            </LinearLayout>



        </RelativeLayout>






        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />

    </RelativeLayout>
</layout>